Closed Bug 1797887 Opened 2 years ago Closed 2 years ago

Shader disk cache is not supported with nightly on Windows

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- unaffected
firefox108 --- fixed

People

(Reporter: sotaro, Assigned: cmartin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

It seems like a regression from bug 1347710 Comment 78.

I saw the following error log in about:support with latest nightly on Windows.

GP+[GFX1-]: shader-cache: Shader disk cache is not supported

The problem did not happen with pref security.sandbox.gpu.level=0.

Regressed by: 1347710

Chris, the shader cache is stored at [profile-path]/shader-cache. Can we allow the gpu process access to that path?

Flags: needinfo?(cmartin)

use_disk_cache in WrProgramCache::new() was false

Once Firefox run with pref security.sandbox.gpu.level=0, the use_disk_cache became true even with pref security.sandbox.gpu.level=1.

But the following new error message exists.

GP+[GFX1-]: shader-cache: Failed to write startup whitelist

gfxUtils::RemoveShaderCacheFromDiskIfNecessary() removes shader disk cache from parent process if Firefox build version or gfx driver is updated. It might be related to the following error.

GP+[GFX1-]: shader-cache: Shader disk cache is not supported

Assignee: nobody → cmartin
Status: NEW → ASSIGNED

FWIW on my machine, the code Jeff shared in Comment 3 still works and allows access to the shader cache... So there must be some difference between machines here.

Assignee: cmartin → nobody
Status: ASSIGNED → NEW
Flags: needinfo?(cmartin)
Assignee: nobody → cmartin
Status: NEW → ASSIGNED
Severity: -- → S2
Priority: -- → P1
Severity: S2 → S3
Pushed by cmartin@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1fa40d8e9320
Workaround: allow access to entire filesystem from GPU sandbox r=handyman,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch

This TEMPORARY WORKAROUND should have at the very least a follow-up bug to fix the hack it introduces.

Flags: needinfo?(cmartin)
Blocks: 1799470
Blocks: 1347710

Whoops -- Meant to do this before I left for PTO. FWIW I did have it at the top of my notes to file a follow-up bug :)

Flags: needinfo?(cmartin)
No longer blocks: 1799470
See Also: → 1799470
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: