Bug 1797887 - Workaround: allow access to entire filesystem from GPU sandbox r=handyman,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D160655