security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp
@@ -995,53 +995,14 @@ void SandboxBroker::SetSecurityLevelForGPUProcess(
       sandbox::SBOX_ALL_OK == result,
       "With these static arguments AddRule should never fail, what happened?");
 
-  // The GPU process needs to write to a shader cache for performance reasons
-  // Note that we can't use the sProfileDir variable stored above because
-  // the GPU process is created very early in Gecko initialization before
-  // SandboxBroker::GeckoDependentInitialize() is called
-  if (aProfileDir) {
-    if (![&aProfileDir, this] {
-          nsString shaderCacheRulePath;
-          nsresult rv = aProfileDir->GetPath(shaderCacheRulePath);
-          if (NS_FAILED(rv)) {
-            return false;
-          }
-          if (shaderCacheRulePath.IsEmpty()) {
-            return false;
-          }
-
-          if (Substring(shaderCacheRulePath, 0, 2).Equals(u"\\\\")) {
-            shaderCacheRulePath.InsertLiteral(u"??\\UNC", 1);
-          }
-
-          shaderCacheRulePath.Append(u"\\shader-cache");
-
-          sandbox::ResultCode result =
-              mPolicy->AddRule(sandbox::TargetPolicy::SUBSYS_FILES,
-                               sandbox::TargetPolicy::FILES_ALLOW_DIR_ANY,
-                               shaderCacheRulePath.get());
-
-          if (result != sandbox::SBOX_ALL_OK) {
-            return false;
-          }
-
-          shaderCacheRulePath.Append(u"\\*");
-
-          result = mPolicy->AddRule(sandbox::TargetPolicy::SUBSYS_FILES,
-                                    sandbox::TargetPolicy::FILES_ALLOW_ANY,
-                                    shaderCacheRulePath.get());
-
-          if (result != sandbox::SBOX_ALL_OK) {
-            return false;
-          }
-
-          return true;
-        }()) {
-      NS_WARNING(
-          "Failed to add rule enabling GPU shader cache. Performance will be "
-          "negatively affected");
-    }
-  }
+  // TEMPORARY WORKAROUND - We don't want to back out the GPU sandbox, so we're
+  // going to give access to the entire filesystem until we can figure out a
+  // reliable way to only give access to the Shader Cache
+  result = mPolicy->AddRule(sandbox::TargetPolicy::SUBSYS_FILES,
+                            sandbox::TargetPolicy::FILES_ALLOW_ANY, L"*");
+  MOZ_RELEASE_ASSERT(
+      sandbox::SBOX_ALL_OK == result,
+      "With these static arguments AddRule should never fail, what happened?");
 
   // The process needs to be able to duplicate shared memory handles,
   // which are Section handles, to the broker process and other child processes.
